--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
     url: /projects/   
     
   - title: "学术奖励"
-    url: /projects/ 
+    url: /service/ 
 
   # - title: "Talks"
   #   url: /talks/    
