--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "刘云龙"
 title_separator          : "-"
 name                     : &name "刘云龙"
 description              : &description "personal description"
-url                      : https://flora55.github.io/ylliu.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://flora55.github.io/ylliu.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Flora55/ylliu.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
