--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,16 +1,22 @@
 # main links links
 main:
-  - title: "个人简介"
+  - title: "About me"
     url: /self-intro/
     
-  - title: "研究成果"
+  - title: "Publications"
     url: /publications/
     
-  - title: "承担项目"
+  - title: "Projects"
     url: /projects/   
     
-  - title: "学术奖励"
+  - title: "Service"
     url: /service/ 
+    
+  - title: "Students"
+    url: /students/ 
+    
+  - title: "Activities"
+    url: /activities/ 
 
   # - title: "Talks"
   #   url: /talks/    
