--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "刘云龙"
-  avatar           : "profile_liu.png"
+  avatar           : "profile_liu.jpg"
   bio              : "厦门大学航空航天学院自动化系副教授"
   location         : "厦门市"
   employer         :
