--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "About me"
-    url: /about me/
+    url: /about-me/
     
   - title: "Publications"
     url: /publications/
