--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : #"https://linkedin.com/in/anji-liu-7610b7190/"
+  linkedin         : #
   orcid            : # "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
