--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "刘云龙"
   avatar           : "profile_liu.jpg"
-  bio              : "厦门大学航空航天学院自动化系副教授、博士生导师、系副主任"
+  bio              : "厦门大学航空航天学院自动化系副教授、博士生导师"
   location         : "厦门市"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
